--- a/receitas.html
+++ b/receitas.html
@@ -21,10 +21,8 @@
   --radius:18px;
   --shadow:0 18px 40px rgba(0,0,0,.12);
 }
-
 *{box-sizing:border-box}
 html,body{height:100%}
-
 body{
   margin:0;
   font-family:Inter,sans-serif;
@@ -36,15 +34,12 @@ body{
 /* HEADER FIXO */
 .header{
   position:fixed;
-  top:0;
-  left:0;
-  right:0;
+  top:0; left:0; right:0;
   z-index:50;
-  background:rgba(244,246,251,.95);
+  background:rgba(244,246,251,.96);
   backdrop-filter:blur(10px);
   border-bottom:1px solid var(--border);
 }
-
 .header-inner{
   max-width:1400px;
   margin:auto;
@@ -53,13 +48,11 @@ body{
   flex-direction:column;
   gap:10px;
 }
-
 .header h1{
   margin:0;
   font-size:22px;
   font-weight:900;
 }
-
 .header p{
   margin:0;
   color:var(--muted);
@@ -72,7 +65,6 @@ body{
   grid-template-columns:2fr 1fr 1fr auto;
   gap:10px;
 }
-
 .filters input,
 .filters select{
   height:38px;
@@ -83,14 +75,12 @@ body{
   font-size:12px;
   background:#fff;
 }
-
 .filters input:focus,
 .filters select:focus{
   outline:none;
   border-color:var(--primary);
   box-shadow:0 0 0 3px rgba(37,99,235,.25);
 }
-
 .btn-export{
   height:38px;
   padding:0 18px;
@@ -105,17 +95,16 @@ body{
   box-shadow:0 10px 24px rgba(37,99,235,.45);
 }
 
-/* CONTEÚDO */
+/* CONTEÚDO COM SCROLL */
 .content{
   position:absolute;
   top:118px;
-  left:0;
-  right:0;
-  bottom:0;
+  left:0; right:0; bottom:0;
   overflow:auto;
   padding:18px;
 }
 
+/* TABELA */
 .table-wrap{
   max-width:1400px;
   margin:auto;
@@ -125,19 +114,16 @@ body{
   box-shadow:var(--shadow);
   overflow:auto;
 }
-
 table{
   width:100%;
   border-collapse:collapse;
   min-width:1000px;
 }
-
 th,td{
   padding:12px 10px;
   border-bottom:1px solid var(--border);
   font-size:12px;
 }
-
 th{
   position:sticky;
   top:0;
@@ -145,18 +131,11 @@ th{
   font-weight:900;
   z-index:2;
 }
-
-tbody tr:hover{
-  background:#f8fafc;
-}
+tbody tr:hover{ background:#f8fafc }
 
 @media(max-width:900px){
-  .filters{
-    grid-template-columns:1fr 1fr;
-  }
-  .btn-export{
-    grid-column:1/-1;
-  }
+  .filters{ grid-template-columns:1fr 1fr }
+  .btn-export{ grid-column:1/-1 }
 }
 </style>
 </head>
@@ -281,7 +260,19 @@ filtroNome.oninput=render;
 filtroTipo.onchange=render;
 filtroStatus.onchange=render;
 
-async function exportarRelatorio(){ alert("Exportação mantém sua lógica original"); }
+async function exportarRelatorio(){
+  const hoje = new Date().toISOString().slice(0,10);
+  const wb = XLSX.utils.book_new();
+  const linhas = [...document.querySelectorAll("#tbody tr")].map(tr =>
+    [...tr.children].map(td => td.innerText)
+  );
+  const ws = XLSX.utils.aoa_to_sheet([
+    ["Prato","Tipo","Status","Custo Base","Impostos","Custo Final","Venda","Lucro","CMV %","Margem %"],
+    ...linhas
+  ]);
+  XLSX.utils.book_append_sheet(wb, ws, "Resumo");
+  XLSX.writeFile(wb, `relatorio_CMV_${hoje}.xlsx`);
+}
 
 carregar();
 </script>
