--- a/receitas.html
+++ b/receitas.html
@@ -5,7 +5,11 @@
 <title>Relatório Executivo • CMV</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
+
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 
@@ -18,45 +22,58 @@
   --text:#0f172a;
   --muted:#64748b;
   --border:#e5e7eb;
-  --radius:18px;
-  --shadow:0 18px 40px rgba(0,0,0,.12);
+  --radius:22px;
+  --shadow:0 20px 50px rgba(0,0,0,.12);
 }
+
 *{box-sizing:border-box}
-html,body{height:100%}
+
+html,body{
+  height:100%;
+  overflow:hidden;
+}
+
 body{
   margin:0;
   font-family:Inter,sans-serif;
-  background:var(--bg);
+  background:
+    radial-gradient(1200px 500px at 10% -10%, #eef2ff 0%, transparent 60%),
+    radial-gradient(1200px 500px at 110% 10%, #ecfeff 0%, transparent 60%),
+    var(--bg);
   color:var(--text);
-  overflow:hidden;
+  display:flex;
+  flex-direction:column;
 }
 
 /* HEADER FIXO */
 .header{
-  position:fixed;
-  top:0; left:0; right:0;
-  z-index:50;
+  flex-shrink:0;
+  backdrop-filter:blur(8px);
   background:rgba(244,246,251,.96);
-  backdrop-filter:blur(10px);
   border-bottom:1px solid var(--border);
+  z-index:10;
 }
+
 .header-inner{
   max-width:1400px;
   margin:auto;
-  padding:14px 18px 10px;
+  padding:14px 18px 12px;
   display:flex;
   flex-direction:column;
   gap:10px;
 }
+
 .header h1{
   margin:0;
-  font-size:22px;
+  font-size:24px;
   font-weight:900;
 }
+
 .header p{
   margin:0;
   color:var(--muted);
   font-size:12px;
+  font-weight:600;
 }
 
 /* FILTROS */
@@ -65,25 +82,28 @@ body{
   grid-template-columns:2fr 1fr 1fr auto;
   gap:10px;
 }
+
 .filters input,
 .filters select{
-  height:38px;
+  height:42px;
   border-radius:999px;
   border:1px solid var(--border);
-  padding:0 14px;
+  padding:0 16px;
   font-weight:800;
-  font-size:12px;
+  font-size:13px;
   background:#fff;
 }
+
 .filters input:focus,
 .filters select:focus{
   outline:none;
   border-color:var(--primary);
-  box-shadow:0 0 0 3px rgba(37,99,235,.25);
+  box-shadow:0 0 0 3px rgba(37,99,235,.2);
 }
+
 .btn-export{
-  height:38px;
-  padding:0 18px;
+  height:42px;
+  padding:0 22px;
   border-radius:999px;
   border:none;
   cursor:pointer;
@@ -95,47 +115,50 @@ body{
   box-shadow:0 10px 24px rgba(37,99,235,.45);
 }
 
-/* CONTEÚDO COM SCROLL */
-.content{
-  position:absolute;
-  top:118px;
-  left:0; right:0; bottom:0;
+/* CONTEÚDO SCROLL */
+.main{
+  flex:1;
   overflow:auto;
   padding:18px;
 }
 
-/* TABELA */
 .table-wrap{
-  max-width:1400px;
-  margin:auto;
   background:var(--card);
-  border-radius:18px;
+  border-radius:22px;
   border:1px solid var(--border);
   box-shadow:var(--shadow);
   overflow:auto;
 }
+
 table{
   width:100%;
   border-collapse:collapse;
-  min-width:1000px;
+  min-width:1100px;
 }
-th,td{
+
+th, td{
   padding:12px 10px;
   border-bottom:1px solid var(--border);
   font-size:12px;
+  text-align:left;
 }
+
 th{
-  position:sticky;
-  top:0;
   background:#f1f5f9;
   font-weight:900;
-  z-index:2;
 }
-tbody tr:hover{ background:#f8fafc }
+
+tbody tr:hover{
+  background:#f8fafc;
+}
 
 @media(max-width:900px){
-  .filters{ grid-template-columns:1fr 1fr }
-  .btn-export{ grid-column:1/-1 }
+  .filters{
+    grid-template-columns:1fr 1fr;
+  }
+  .btn-export{
+    grid-column:1/-1;
+  }
 }
 </style>
 </head>
@@ -149,7 +172,9 @@ tbody tr:hover{ background:#f8fafc }
 
     <div class="filters">
       <input id="filtroNome" placeholder="Buscar por prato...">
-      <select id="filtroTipo"><option value="">Todos os tipos</option></select>
+      <select id="filtroTipo">
+        <option value="">Todos os tipos</option>
+      </select>
       <select id="filtroStatus">
         <option value="">Todos</option>
         <option value="ATIVO">Ativos</option>
@@ -160,7 +185,7 @@ tbody tr:hover{ background:#f8fafc }
   </div>
 </div>
 
-<div class="content">
+<div class="main">
   <div class="table-wrap">
     <table>
       <thead>
@@ -188,58 +213,63 @@ const sb = supabase.createClient(
   "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
 );
 
+const hoje = new Date().toISOString().slice(0,10);
 let pratos=[], itens=[], impostos=[];
 
-async function carregar(){
-  pratos = (await sb.from("buffet").select("*")).data || [];
-  itens = (await sb.from("buffet_itens").select("buffet_id, custo_calculado")).data || [];
-  impostos = (await sb.from("impostos").select("buffet_id, modalidade, valor")).data || [];
+async function carregarBase(){
+  const p = await sb.from("buffet").select("*");
+  const i = await sb.from("buffet_itens").select("buffet_id,nome,quantidade,unidade_uso,custo_unitario,custo_calculado");
+  const im = await sb.from("impostos").select("buffet_id,modalidade,valor");
+
+  pratos = p.data||[];
+  itens = i.data||[];
+  impostos = im.data||[];
+
   carregarTipos();
-  render();
+  renderPreview();
 }
 
 function carregarTipos(){
-  const tipos = [...new Set(pratos.map(p=>p.tipo).filter(Boolean))];
-  filtroTipo.innerHTML = `<option value="">Todos os tipos</option>` +
-    tipos.map(t=>`<option>${t}</option>`).join("");
+  const tipos=[...new Set(pratos.map(p=>p.tipo).filter(Boolean))];
+  filtroTipo.innerHTML=`<option value="">Todos os tipos</option>`+
+    tipos.map(t=>`<option value="${t}">${t}</option>`).join("");
 }
 
-function render(){
-  const nome = filtroNome.value?.toUpperCase()||"";
-  const tipo = filtroTipo.value||"";
-  const status = filtroStatus.value||"";
+function renderPreview(){
+  const nome=filtroNome.value?.toUpperCase()||"";
+  const tipo=filtroTipo.value||"";
+  const status=filtroStatus.value||"";
 
-  const mapa={};
+  const mapaCustos={};
   itens.forEach(i=>{
-    mapa[i.buffet_id] ??= {base:0,imp:0};
-    mapa[i.buffet_id].base += Number(i.custo_calculado||0);
+    mapaCustos[i.buffet_id]??={base:0,impostos:0};
+    mapaCustos[i.buffet_id].base+=Number(i.custo_calculado||0);
   });
-
   impostos.forEach(i=>{
-    mapa[i.buffet_id] ??= {base:0,imp:0};
-    if(i.modalidade==="FIXO") mapa[i.buffet_id].imp += Number(i.valor||0);
+    mapaCustos[i.buffet_id]??={base:0,impostos:0};
+    if(i.modalidade==="FIXO") mapaCustos[i.buffet_id].impostos+=Number(i.valor||0);
     if(i.modalidade==="PERCENTUAL"){
-      const b = mapa[i.buffet_id].base||0;
-      mapa[i.buffet_id].imp += (b * Number(i.valor||0))/100;
+      const b=mapaCustos[i.buffet_id]?.base||0;
+      mapaCustos[i.buffet_id].impostos+=(b*Number(i.valor||0))/100;
     }
   });
 
   tbody.innerHTML="";
   pratos.forEach(p=>{
-    const st = p.ativo ? "ATIVO" : "INATIVO";
+    const st=p.ativo?"ATIVO":"INATIVO";
     if(nome && !p.nome.toUpperCase().includes(nome)) return;
     if(tipo && p.tipo!==tipo) return;
     if(status && st!==status) return;
 
-    const base = mapa[p.id]?.base||0;
-    const imp  = mapa[p.id]?.imp||0;
-    const total = base+imp;
-    const venda = Number(p.preco_venda||0);
-    const lucro = venda-total;
-    const cmv = venda ? (total/venda)*100 : 0;
-    const margem = venda ? (lucro/venda)*100 : 0;
+    const base=mapaCustos[p.id]?.base||0;
+    const imp=mapaCustos[p.id]?.impostos||0;
+    const total=base+imp;
+    const venda=Number(p.preco_venda||0);
+    const lucro=venda-total;
+    const margem=venda?(lucro/venda)*100:0;
+    const cmv=venda?(total/venda)*100:0;
 
-    tbody.innerHTML += `
+    tbody.innerHTML+=`
       <tr>
         <td>${p.nome}</td>
         <td>${p.tipo||"-"}</td>
@@ -251,30 +281,16 @@ function render(){
         <td>R$ ${lucro.toFixed(2)}</td>
         <td>${cmv.toFixed(1)}%</td>
         <td>${margem.toFixed(1)}%</td>
-      </tr>
-    `;
+      </tr>`;
   });
 }
 
-filtroNome.oninput=render;
-filtroTipo.onchange=render;
-filtroStatus.onchange=render;
+filtroNome.oninput = renderPreview;
+filtroTipo.onchange = renderPreview;
+filtroStatus.onchange = renderPreview;
 
-async function exportarRelatorio(){
-  const hoje = new Date().toISOString().slice(0,10);
-  const wb = XLSX.utils.book_new();
-  const linhas = [...document.querySelectorAll("#tbody tr")].map(tr =>
-    [...tr.children].map(td => td.innerText)
-  );
-  const ws = XLSX.utils.aoa_to_sheet([
-    ["Prato","Tipo","Status","Custo Base","Impostos","Custo Final","Venda","Lucro","CMV %","Margem %"],
-    ...linhas
-  ]);
-  XLSX.utils.book_append_sheet(wb, ws, "Resumo");
-  XLSX.writeFile(wb, `relatorio_CMV_${hoje}.xlsx`);
-}
-
-carregar();
+carregarBase();
 </script>
+
 </body>
 </html>
