--- a/receitas.html
+++ b/receitas.html
@@ -30,13 +30,13 @@
 html,body{
   height:100%;
   margin:0;
-  overflow:hidden; /* 🔒 trava scroll da página inteira */
+  overflow:hidden;
   font-family:Inter,sans-serif;
   background:var(--bg);
   color:var(--text);
 }
 
-/* ================= HEADER FIXO REAL ================= */
+/* HEADER FIXO */
 .header{
   position:fixed;
   top:0;
@@ -71,7 +71,7 @@ html,body{
   font-weight:600;
 }
 
-/* ================= FILTROS ================= */
+/* FILTROS */
 .filters{
   display:grid;
   grid-template-columns:2fr 1fr 1fr auto;
@@ -89,13 +89,6 @@ html,body{
   background:#fff;
 }
 
-.filters input:focus,
-.filters select:focus{
-  outline:none;
-  border-color:var(--primary);
-  box-shadow:0 0 0 3px rgba(37,99,235,.2);
-}
-
 .btn-export{
   height:42px;
   padding:0 22px;
@@ -110,14 +103,14 @@ html,body{
   box-shadow:0 10px 24px rgba(37,99,235,.45);
 }
 
-/* ================= CONTEÚDO COM SCROLL ================= */
+/* CONTEÚDO */
 .main{
   position:fixed;
-  top:128px;          /* 🔥 altura exata do header */
+  top:128px;
   left:0;
   right:0;
   bottom:0;
-  overflow:auto;     /* 👈 somente aqui rola */
+  overflow:auto;
   padding:18px;
 }
 
@@ -147,17 +140,11 @@ th{
   font-weight:900;
 }
 
-tbody tr:hover{
-  background:#f8fafc;
-}
+tbody tr:hover{ background:#f8fafc }
 
 @media(max-width:900px){
-  .filters{
-    grid-template-columns:1fr 1fr;
-  }
-  .btn-export{
-    grid-column:1/-1;
-  }
+  .filters{ grid-template-columns:1fr 1fr }
+  .btn-export{ grid-column:1/-1 }
 }
 </style>
 </head>
@@ -215,14 +202,9 @@ const sb = supabase.createClient(
 let pratos=[], itens=[], impostos=[];
 
 async function carregarBase(){
-  const p = await sb.from("buffet").select("*");
-  const i = await sb.from("buffet_itens").select("buffet_id,nome,quantidade,unidade_uso,custo_unitario,custo_calculado");
-  const im = await sb.from("impostos").select("buffet_id,modalidade,valor");
-
-  pratos = p.data||[];
-  itens = i.data||[];
-  impostos = im.data||[];
-
+  pratos = (await sb.from("buffet").select("*")).data || [];
+  itens = (await sb.from("buffet_itens").select("buffet_id,nome,quantidade,unidade_uso,custo_unitario,custo_calculado")).data || [];
+  impostos = (await sb.from("impostos").select("buffet_id,modalidade,valor")).data || [];
   carregarTipos();
   renderPreview();
 }
@@ -233,45 +215,52 @@ function carregarTipos(){
     tipos.map(t=>`<option value="${t}">${t}</option>`).join("");
 }
 
-function renderPreview(){
+function getMapaCustos(){
+  const mapa={};
+  itens.forEach(i=>{
+    mapa[i.buffet_id]??={base:0, impostos:0};
+    mapa[i.buffet_id].base+=Number(i.custo_calculado||0);
+  });
+  impostos.forEach(i=>{
+    mapa[i.buffet_id]??={base:0, impostos:0};
+    if(i.modalidade==="FIXO") mapa[i.buffet_id].impostos+=Number(i.valor||0);
+    if(i.modalidade==="PERCENTUAL"){
+      const b=mapa[i.buffet_id]?.base||0;
+      mapa[i.buffet_id].impostos+=(b*Number(i.valor||0))/100;
+    }
+  });
+  return mapa;
+}
+
+function getFiltrados(){
   const nome=filtroNome.value?.toUpperCase()||"";
   const tipo=filtroTipo.value||"";
   const status=filtroStatus.value||"";
-
-  const mapaCustos={};
-  itens.forEach(i=>{
-    mapaCustos[i.buffet_id]??={base:0,impostos:0};
-    mapaCustos[i.buffet_id].base+=Number(i.custo_calculado||0);
-  });
-  impostos.forEach(i=>{
-    mapaCustos[i.buffet_id]??={base:0,impostos:0};
-    if(i.modalidade==="FIXO") mapaCustos[i.buffet_id].impostos+=Number(i.valor||0);
-    if(i.modalidade==="PERCENTUAL"){
-      const b=mapaCustos[i.buffet_id]?.base||0;
-      mapaCustos[i.buffet_id].impostos+=(b*Number(i.valor||0))/100;
-    }
-  });
-
-  tbody.innerHTML="";
-  pratos.forEach(p=>{
+  return pratos.filter(p=>{
     const st=p.ativo?"ATIVO":"INATIVO";
-    if(nome && !p.nome.toUpperCase().includes(nome)) return;
-    if(tipo && p.tipo!==tipo) return;
-    if(status && st!==status) return;
+    if(nome && !p.nome.toUpperCase().includes(nome)) return false;
+    if(tipo && p.tipo!==tipo) return false;
+    if(status && st!==status) return false;
+    return true;
+  });
+}
 
-    const base=mapaCustos[p.id]?.base||0;
-    const imp=mapaCustos[p.id]?.impostos||0;
+function renderPreview(){
+  const mapa=getMapaCustos();
+  tbody.innerHTML="";
+  getFiltrados().forEach(p=>{
+    const base=mapa[p.id]?.base||0;
+    const imp=mapa[p.id]?.impostos||0;
     const total=base+imp;
     const venda=Number(p.preco_venda||0);
     const lucro=venda-total;
     const margem=venda?(lucro/venda)*100:0;
     const cmv=venda?(total/venda)*100:0;
-
     tbody.innerHTML+=`
       <tr>
         <td>${p.nome}</td>
         <td>${p.tipo||"-"}</td>
-        <td>${st}</td>
+        <td>${p.ativo?"ATIVO":"INATIVO"}</td>
         <td>R$ ${base.toFixed(2)}</td>
         <td>R$ ${imp.toFixed(2)}</td>
         <td><b>R$ ${total.toFixed(2)}</b></td>
@@ -283,9 +272,35 @@ function renderPreview(){
   });
 }
 
-filtroNome.oninput = renderPreview;
-filtroTipo.onchange = renderPreview;
-filtroStatus.onchange = renderPreview;
+async function exportarRelatorio(){
+  const mapa=getMapaCustos();
+  const filtrados=getFiltrados();
+  const hoje=new Date().toISOString().slice(0,10);
+
+  const resumo=filtrados.map(p=>{
+    const base=mapa[p.id]?.base||0;
+    const imp=mapa[p.id]?.impostos||0;
+    const total=base+imp;
+    const venda=Number(p.preco_venda||0);
+    const lucro=venda-total;
+    const margem=venda?(lucro/venda)*100:0;
+    const cmv=venda?(total/venda)*100:0;
+    return {
+      Prato:p.nome, Tipo:p.tipo, Status:p.ativo?"ATIVO":"INATIVO",
+      "Custo Base":base.toFixed(2), Impostos:imp.toFixed(2),
+      "Custo Final":total.toFixed(2), Venda:venda.toFixed(2),
+      Lucro:lucro.toFixed(2), "CMV %":cmv.toFixed(2), "Margem %":margem.toFixed(2)
+    };
+  });
+
+  const wb=XLSX.utils.book_new();
+  XLSX.utils.book_append_sheet(wb,XLSX.utils.json_to_sheet(resumo),"Resumo Filtrado");
+  XLSX.writeFile(wb,`relatorio_CMV_filtrado_${hoje}.xlsx`);
+}
+
+filtroNome.oninput=renderPreview;
+filtroTipo.onchange=renderPreview;
+filtroStatus.onchange=renderPreview;
 
 carregarBase();
 </script>
