--- a/relatorios.html
+++ b/relatorios.html
@@ -167,7 +167,7 @@ body{
     </a>
 
     <!-- 2 -->
-    <a href="ingredientes.html" class="card">
+    <a href="ingredientesexcel.html" class="card">
       <div class="icon">🧾</div>
       <h3>Relatório de Ingredientes</h3>
       <p>Consumo, custo unitário e impacto no CMV por item.</p>
