--- a/dashboard.html
+++ b/dashboard.html
@@ -255,7 +255,7 @@ iframe{flex:1;width:100%;border:0;background:#fff}
     <div class="icon" onclick="openPage('ingredientes.html',this)"><span class="glyph box"></span></div>
     <div class="icon" onclick="openPage('analiseficha.html',this)"><span class="glyph chart"></span></div>
    <div class="icon" onclick="openPage('config.html',this)"><span class="glyph settings"></span></div>
-    <div class="icon" onclick="openPage('igredientesexcell.html',this)"><span class="glyph settings"></span></div>
+    <div class="icon" onclick="openPage('ingredientesexcell.html',this)"><span class="glyph settings"></span></div>
 <div class="icon" onclick="openPage('midias.html',this)"><span class="glyph media"></span></div>
      <div class="icon" onclick="openPage('relatorios.html',this)"><span class="glyph settings"></span></div>
 
