--- a/dashboard.html
+++ b/dashboard.html
@@ -257,7 +257,7 @@ iframe{flex:1;width:100%;border:0;background:#fff}
   <div class="icon" onclick="openPage('config.html',this)"><span class="glyph settings"></span></div>
 
   <!-- Excel Ingredientes -->
-  <div class="icon" onclick="openPage('ingredientesexcell.html',this)">
+  <div class="icon" onclick="openPage('ingredientesexcel.html',this)">
     <span class="glyph doc"></span>
   </div>
 
@@ -323,7 +323,7 @@ const titles = {
   "ingredientes.html": "CB SYSTEMS® - Ingredientes",
   "analiseficha.html": "CB SYSTEMS® - Análise de Fichas",
   "config.html": "CB SYSTEMS® - Análise financeira",
-  "ingredientesexcell.html": "CB SYSTEMS® - Excel de Ingredientes", // ✅ corrigido
+  "ingredientesexcel.html": "CB SYSTEMS® - Excel de Ingredientes", // ✅ corrigido
   "midias.html": "CB SYSTEMS® - Mídias do Cardápio",
   "relatorios.html": "CB SYSTEMS® - Relatórios"
 };
