--- a/dashboard.html
+++ b/dashboard.html
@@ -251,14 +251,30 @@ iframe{flex:1;width:100%;border:0;background:#fff}
 <div id="app" class="app">
 <aside class="sidebar">
   <div class="icon active" onclick="openPage('home.html',this)"><span class="glyph home"></span></div>
-  <div class="icon" onclick="openPage('fichatecnica.html',this)"><span class="glyph doc"></span></div>
-  <div class="icon" onclick="openPage('ingredientes.html',this)"><span class="glyph box"></span></div>
-  <div class="icon" onclick="openPage('analiseficha.html',this)"><span class="glyph chart"></span></div>
-  <div class="icon" onclick="openPage('config.html',this)"><span class="glyph settings"></span></div>
 
-  <!-- Excel Ingredientes -->
-  <div class="icon" onclick="openPage('ingredientesexcel.html',this)">
+  <!-- Fichas Técnicas -->
+  <div class="icon" onclick="openPage('fichatecnica.html',this)">
     <span class="glyph doc"></span>
+  </div>
+
+  <!-- Ingredientes -->
+  <div class="icon" onclick="openPage('ingredientes.html',this)">
+    <span class="glyph box"></span>
+  </div>
+
+  <!-- Análise -->
+  <div class="icon" onclick="openPage('analiseficha.html',this)">
+    <span class="glyph chart"></span>
+  </div>
+
+  <!-- Financeiro -->
+  <div class="icon" onclick="openPage('config.html',this)">
+    <span class="glyph settings"></span>
+  </div>
+
+  <!-- Excel Ingredientes (ícone diferente do doc normal) -->
+  <div class="icon" onclick="openPage('ingredientesexcel.html',this)">
+    <span class="glyph box"></span>
   </div>
 
   <!-- Mídias -->
@@ -266,9 +282,9 @@ iframe{flex:1;width:100%;border:0;background:#fff}
     <span class="glyph media"></span>
   </div>
 
-  <!-- Relatórios -->
+  <!-- Relatórios (ícone diferente da análise) -->
   <div class="icon" onclick="openPage('relatorios.html',this)">
-    <span class="glyph chart"></span>
+    <span class="glyph doc"></span>
   </div>
 </aside>
 
